--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>SY GROUP</title>
+    <link rel="icon" href="./image/favicon.ico" type="image/x-icon" />
+
 		<!-- swiper輪播套件 -->
 		<link
 			rel="stylesheet"
