--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>SY GROUP</title>
     <link rel="icon" href="./image/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./index.css">
 
 		<!-- swiper輪播套件 -->
 		<link
@@ -32,7 +33,7 @@
 	<body>
 		<header>
 			<div class="company">
-				<img class="sy-logo" src="./image/SY-logo.png" alt="" />
+        <img class="sy-logo" src="./image/SY-logo.png" alt="" />
 				<a class="company-title" href="index.html">Shiuan Yuan</a>
 			</div>
 			<nav class="navbar">
@@ -154,9 +155,9 @@
 			<div class="award-img">
 				<img src="./image/award/arch_design_award.jpg" alt="" />
 				<img src="./image/award/muse.png" alt="" />
-				<img src="./image/award/if.png" alt="" />
+        <img src="./image/award/a_design_award.png" alt="" />
 				<img src="./image/award/tid.png" alt="" />
-				<img src="./image/award/a_design_award.png" alt="" />
+        <img src="./image/award/if.png" alt="" />
 			</div>
 		</div>
 
@@ -370,626 +371,6 @@
 		</div>
 	</body>
 </html>
-<style>
-	body {
-		background: #fff4f0;
-		margin: 0;
-		overflow-x: hidden;
-		font-family: "Poppins", sans-serif;
-		font-weight: 400;
-		font-style: normal;
-		font-size: 1rem;
-	}
-
-	header {
-		background: #44444400;
-		position: fixed;
-		top: 0;
-		left: 0;
-		right: 0;
-		width: 100vw;
-		z-index: 100;
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		box-sizing: border-box;
-		padding-right: 2rem;
-		height: 70px;
-		transition: transform 0.5s;
-	}
-
-	header.invisible {
-		opacity: 0;
-		transform: translateY(-100%);
-		transition: opacity 0.3s, transform 0.3s;
-	}
-
-	a,
-	p {
-		text-decoration: none;
-		line-height: 0.75;
-	}
-
-	.company {
-		display: flex;
-		align-items: center;
-	}
-
-	.sy-logo {
-		width: 70px;
-		height: 70px;
-	}
-
-	/* // <uniquifier>: Use a unique and descriptive class name */
-	.company-title {
-		font-weight: 400;
-		font-style: normal;
-		font-size: 2rem;
-		color: #111;
-		display: inline-block;
-		vertical-align: top;
-	}
-
-	.company-title:hover {
-		color: #0070d8;
-	}
-
-	.nav-text {
-		font-weight: 400;
-		font-style: normal;
-		color: #2e2e2e;
-		font-size: 1.6rem;
-		padding: 0.2rem;
-	}
-
-	.nav-text:hover {
-		color: #b0b0b0;
-	}
-
-	.swiper-slide img {
-		width: 100vw;
-		height: 100vh;
-		object-fit: cover;
-	}
-
-	.mySwiper .swiper-slide {
-		transition: opacity 1.5s ease-in-out;
-	}
-
-	.swiper-button-next,
-	.swiper-button-prev {
-		color: #d1d1d1;
-		opacity: 0.5;
-	}
-
-	.swiper-button-next:hover,
-	.swiper-button-prev:hover {
-		background-color: #f1f1f1;
-		color: #111;
-		opacity: 0.8;
-	}
-
-	.portfolio {
-		width: 80vw;
-		height: 80vh;
-		background-size: cover;
-		background-position: center;
-		transition: all 0.5s ease-in-out;
-		z-index: 1;
-		position: relative;
-	}
-
-	.about-content {
-		width: 34vw;
-		height: auto;
-	}
-
-	.about-sy {
-		margin: 4rem auto;
-		width: 70vw;
-		color: #111;
-		line-height: 1.5;
-		font-size: 1.8rem;
-		background-image: url(./image/about/2J7A7821.jpg);
-		background-size: cover;
-		height: 70vh;
-		padding: 1.5rem;
-		background-position: center;
-		text-shadow: 2px 2px 4px #fff;
-	}
-
-	.about-sy p {
-		line-height: 1.5;
-		font-size: 1.4rem;
-	}
-
-	.award-section {
-		margin: 4rem auto;
-		width: 75vw;
-		color: #2e2e2e;
-	}
-
-	.tabs {
-		display: flex;
-		flex-wrap: wrap;
-		padding: 1rem 3rem;
-	}
-
-	.tabs__label {
-		padding: 10px 16px;
-		cursor: pointer;
-		color: #0070d8;
-	}
-
-	.tabs__radio {
-		display: none;
-	}
-
-	.tabs__content {
-		order: 1;
-		width: 100%;
-		line-height: 1.5;
-		font-size: 1rem;
-		display: none;
-		padding: 1rem 0;
-		border-top: 1px solid darkgray;
-	}
-
-	.tabs__content p {
-		margin: 0.8rem;
-	}
-
-	.tabs__radio:checked + .tabs__label {
-		font-weight: bold;
-		color: #003566;
-		border-bottom: 2px solid #003566;
-	}
-
-	.tabs__radio:checked + .tabs__label + .tabs__content {
-		display: initial;
-	}
-
-	.award-img {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		overflow-x: hidden;
-	}
-
-	.award-img img {
-		padding: 10px;
-		width: 60px;
-		height: 90px;
-	}
-
-	.design-project,
-	.workflow-section {
-		margin: 3rem;
-	}
-
-	.portfolio-list {
-		text-align: center;
-		font-weight: 400;
-		color: #0070d8;
-		padding: 1rem;
-	}
-
-	.style-filter {
-		text-align: center;
-		padding: 1rem;
-		transition: padding 0.3s ease, background-color 0.3s ease,
-			box-shadow 0.3s ease;
-		background-color: #fff4f0;
-	}
-
-	.style-filter.sticky {
-		position: fixed;
-		top: 0;
-		left: 0;
-		right: 0;
-		background-color: #fff4f0;
-		padding: 0.75rem 0;
-		box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-		z-index: 99;
-	}
-
-	.style-filter.sticky.scrolled-up {
-		padding-top: 70px;
-		background-color: #fff4f0;
-		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-	}
-
-	.style-filter.sticky,
-	.style-filter.sticky.scrolled-up {
-		transition: padding 0.3s ease, background-color 0.3s ease,
-			box-shadow 0.3s ease;
-	}
-
-	.btn,
-	.btn:focus,
-	.btn:hover {
-		position: relative;
-		min-width: 100px;
-		border: 0;
-		background-color: #fff4f0;
-		color: gray;
-		font-size: 1rem;
-		font-weight: bold;
-		text-align: center;
-		text-decoration: none;
-		text-transform: uppercase;
-		overflow: hidden;
-		transition: background 400ms;
-		padding: 10px 20px;
-	}
-	.btn:hover {
-		color: #003566;
-	}
-	.btn .ripple {
-		position: absolute;
-		border-radius: 50%;
-		transform: scale(0);
-		animation: anim 600ms linear;
-		background-color: rgba(255, 255, 255, 0.7);
-		user-select: none;
-		pointer-events: none;
-	}
-	@keyframes anim {
-		to {
-			transform: scale(4);
-			opacity: 0;
-		}
-	}
-
-	.btn-selected {
-		background-color: #fff4f0;
-		color: #2e2e2e;
-	}
-
-	.latest-works {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		width: 75vw;
-		margin: 0 auto;
-		flex-wrap: wrap;
-	}
-
-	.portfolio-size {
-		width: 45%;
-		margin: 1.5rem;
-		position: relative;
-		overflow: hidden;
-	}
-
-	.latest-work-portfolio {
-		width: 100%;
-		height: auto;
-		display: block;
-	}
-
-	.portfolio-name {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		z-index: 10;
-		background-color: rgba(216, 222, 233, 0.85);
-		color: #005a9c;
-		opacity: 0;
-		transition: opacity 0.3s ease;
-		font-size: 1.5rem;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		box-sizing: border-box;
-	}
-
-	.portfolio-size:hover .portfolio-name {
-		opacity: 0.9;
-	}
-
-	.workflow-section {
-		height: 100vh;
-		display: flex;
-		justify-content: center;
-		text-align: center;
-		position: relative;
-		background-color: #fff4f0;
-		color: #2e2e2e;
-		font-family: "Poppins", sans-serif;
-	}
-
-	.workflow {
-		text-align: center;
-		font-weight: 400;
-		color: #0070d8;
-	}
-
-	.workflow__bg {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		width: 80%;
-		height: 90%;
-		background-image: url("./image/workflow/workflow-bg.png");
-		background-size: cover;
-		background-position: center;
-		opacity: 0;
-		clip-path: polygon(0% 100%, 0% 100%, 0% 100%);
-		transition: opacity 0.5s ease-out;
-	}
-
-	.workflow__bg.animate {
-		opacity: 1;
-		animation: revealEffect 4s ease-out forwards;
-	}
-
-	@keyframes revealEffect {
-		0% {
-			clip-path: polygon(0% 100%, 0% 100%, 0% 100%);
-		}
-		100% {
-			clip-path: polygon(0% 100%, 100% 100%, 100% 0%);
-		}
-	}
-
-	.workflow-item {
-		display: flex;
-		flex-direction: column-reverse;
-	}
-
-	.workflow-item div {
-		display: flex;
-		flex-direction: row-reverse;
-		align-items: center;
-		position: absolute;
-	}
-
-	.workflow-item img {
-		width: 4.5rem;
-		height: 4.5rem;
-		transform: scale(1, 1);
-		transition: all 0.5s ease-out;
-	}
-
-	.workflow-item1:hover img,
-	.workflow-item2:hover img,
-	.workflow-item3:hover img,
-	.workflow-item4:hover img,
-	.workflow-item5:hover img,
-	.workflow-item6:hover img,
-	.workflow-item7:hover img,
-	.workflow-item8:hover img {
-		transform: scale(1.4, 1.4);
-	}
-
-	.workflow-item p {
-		font-size: 1.4rem;
-		line-height: 1.2;
-	}
-
-	.workflow-item1 {
-		top: 87%;
-		left: 11%;
-		cursor: pointer;
-	}
-
-	.workflow-content {
-		top: 25%;
-		left: 45%;
-		text-align: left;
-		font-size: 1.8rem;
-	}
-
-	.workflow-item1 p,
-	.workflow-item2 p,
-	.workflow-item3 p,
-	.workflow-item4 p,
-	.workflow-item5 p,
-	.workflow-item6 p,
-	.workflow-item7 p,
-	.workflow-item8 p {
-		opacity: 1;
-		visibility: visible;
-		transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-	}
-
-	.workflow-item1:hover p,
-	.workflow-item2:hover p,
-	.workflow-item3:hover p,
-	.workflow-item4:hover p,
-	.workflow-item5:hover p,
-	.workflow-item6:hover p,
-	.workflow-item7:hover p,
-	.workflow-item8:hover p {
-		opacity: 0;
-		visibility: hidden;
-	}
-
-	.workflow-item-content {
-		width: 30vw;
-		font-size: 1.4rem;
-	}
-
-	#workflow-item1-content,
-	#workflow-item2-content,
-	#workflow-item3-content,
-	#workflow-item4-content,
-	#workflow-item5-content,
-	#workflow-item6-content,
-	#workflow-item7-content,
-	#workflow-item8-content {
-		display: block;
-		opacity: 0;
-		transition: opacity 0.3s ease-in-out;
-	}
-
-	.workflow-item1:hover + .workflow-content #workflow-item1-content,
-	.workflow-item2:hover + .workflow-content #workflow-item2-content,
-	.workflow-item3:hover + .workflow-content #workflow-item3-content,
-	.workflow-item4:hover + .workflow-content #workflow-item4-content,
-	.workflow-item5:hover + .workflow-content #workflow-item5-content,
-	.workflow-item6:hover + .workflow-content #workflow-item6-content,
-	.workflow-item7:hover + .workflow-content #workflow-item7-content,
-	.workflow-item8:hover + .workflow-content #workflow-item8-content {
-		display: block;
-		opacity: 1;
-	}
-
-	.workflow-item2 {
-		top: 75%;
-		left: 17.5%;
-		cursor: pointer;
-	}
-
-	.workflow-item3 {
-		top: 63.5%;
-		left: 29.7%;
-		cursor: pointer;
-	}
-
-	.workflow-item4 {
-		top: 52%;
-		left: 36%;
-		cursor: pointer;
-	}
-
-	.workflow-item5 {
-		top: 40.5%;
-		left: 42%;
-		cursor: pointer;
-	}
-
-	.workflow-item6 {
-		top: 29%;
-		left: 50.5%;
-		cursor: pointer;
-	}
-
-	.workflow-item7 {
-		top: 17.5%;
-		left: 60.5%;
-		cursor: pointer;
-	}
-
-	.workflow-item8 {
-		top: 6%;
-		left: 70%;
-		cursor: pointer;
-	}
-
-	.contant-info {
-		font-family: "Poppins", sans-serif;
-		font-size: 1.2rem;
-		font-weight: 300;
-		box-sizing: border-box;
-		height: 25vh;
-		width: 100%;
-		text-align: center;
-		padding: 2rem;
-		background-color: #2e2e2e;
-		color: #b0b0b0;
-	}
-
-	@media screen and (max-width: 1199px) {
-		.about-sy {
-			width: 100vw;
-			font-size: 1.8rem;
-			min-width: 768px;
-			min-height: 600px;
-		}
-
-		.about-content {
-			width: 40vw;
-		}
-
-		.award-section {
-			width: 100vw;
-			min-width: 768px;
-		}
-
-		.latest-works {
-			min-width: 768px;
-		}
-
-		.portfolio-size {
-			width: 600px;
-			margin: 1rem;
-		}
-	}
-
-	@media screen and (max-width: 767px) {
-		.about-sy {
-			font-size: 1.6rem;
-			min-width: 370px;
-		}
-
-		.about-content {
-			width: 50vw;
-			padding: 2.5rem;
-		}
-
-		.about-sy p {
-			font-size: 1.3rem;
-		}
-
-		.award-section {
-			min-width: 480px;
-		}
-		.award-section p {
-			line-height: 1.1;
-		}
-
-		.latest-works {
-			min-width: 480px;
-		}
-
-		.portfolio-size {
-			width: 90vw;
-		}
-	}
-
-	@media screen and (max-width: 479px) {
-		.about-content {
-			width: 80vw;
-			padding: 1.5rem 0;
-			text-align: center;
-			margin: 0 auto;
-		}
-
-		.award-section {
-			min-width: 370px;
-		}
-
-		.tabs {
-			padding: 1rem 10px;
-		}
-
-		.style-filter {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			flex-wrap: wrap;
-		}
-
-		.btn {
-			width: 34%;
-		}
-
-		.latest-works {
-			min-width: 370px;
-		}
-	}
-
-	@media screen and (max-width: 380px) {
-		.about-content {
-			padding: 1rem 10px;
-		}
-	}
-</style>
 
 <script>
 	// 隱藏header並在滾動至底部時顯示
