--- a/index.html
+++ b/index.html
@@ -34,28 +34,25 @@
 	</head>
 	<body>
 		<header>
-			<div class="company">
-        <img class="sy-logo" src="./image/SY-logo.png" alt="" />
-				<!-- <a class="company-title" href="index.html">Shiuan Yuan</a> -->
-        <div class="logo-box">
+      <div class="company">
+        <img class="sy-logo" src="./image/SY-logo.png" alt="SY Logo" />
+        <!-- <div class="logo-box">
           <abbr data-title="Shiuan Yuan">Shiuan Yuan</abbr>
-        </div>
-			</div>
-			<nav class="navbar">
-				<a class="nav-text" href="#design-project">
-					portfolio
-					<!-- 設計作品 -->
-				</a>
-				<a class="nav-text" href="#workflow ">
-					workflow
-					<!-- 工作流程 -->
-				</a>
-				<a class="nav-text" href="#contant-us">
-					contact
-					<!-- 聯絡我們 -->
-				</a>
-			</nav>
-		</header>
+        </div> -->
+        
+      </div>
+      <button class="hamburger-menu" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <nav class="navbar">
+        <a class="nav-text" href="#design-project">portfolio</a>
+        <a class="nav-text" href="#workflow">workflow</a>
+        <a class="nav-text" href="#contact-us">contact</a>
+      </nav>
+    </header>
+    
 
 		<!-- Swiper -->
 		<div class="swiper mySwiper">
@@ -585,4 +582,17 @@
       abbr.append(hiddenSpan);
     });
   });
+</script>
+
+<!-- nav -->
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+  const hamburgerMenu = document.querySelector('.hamburger-menu');
+  const navbar = document.querySelector('.navbar');
+
+  hamburgerMenu.addEventListener('click', () => {
+    navbar.classList.toggle('active');
+    hamburgerMenu.classList.toggle('active');
+  });
+});
 </script>
