update by shiro

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>SY GROUP</title>
-    <link rel="icon" href="./image/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./index.css">
+		<link rel="icon" href="./image/favicon.ico" type="image/x-icon" />
+		<link rel="stylesheet" href="./index.css" />
 
 		<!-- swiper輪播套件 -->
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <!-- abbr 效果 -->
-    <link rel="stylesheet" href="./abbr.css">
+		<!-- abbr 效果 -->
+		<link rel="stylesheet" href="./abbr.css" />
 		<!-- google fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,25 +34,23 @@
 	</head>
 	<body>
 		<header>
-      <div class="company">
-        <img class="sy-logo" src="./image/SY-logo.png" alt="SY Logo" />
-        <!-- <div class="logo-box">
+			<div class="company">
+				<img class="sy-logo" src="./image/SY-logo.png" alt="SY Logo" />
+				<!-- <div class="logo-box">
           <abbr data-title="Shiuan Yuan">Shiuan Yuan</abbr>
         </div> -->
-        
-      </div>
-      <button class="hamburger-menu" aria-label="Toggle menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <nav class="navbar">
-        <div class="nav-text" data-target="#design-project">portfolio</div>
-        <div class="nav-text" data-target="#workflow">workflow</div>
-        <div class="nav-text" data-target="#contact-us">contact</div>
-      </nav>      
-    </header>
-    
+			</div>
+			<button class="hamburger-menu" aria-label="Toggle menu">
+				<span></span>
+				<span></span>
+				<span></span>
+			</button>
+			<nav class="navbar">
+				<div class="nav-text" data-target="#design-project">portfolio</div>
+				<div class="nav-text" data-target="#workflow">workflow</div>
+				<div class="nav-text" data-target="#contact-us">contact</div>
+			</nav>
+		</header>
 
 		<!-- Swiper -->
 		<div class="swiper mySwiper">
@@ -157,9 +155,9 @@
 			<div class="award-img">
 				<img src="./image/award/arch_design_award.jpg" alt="" />
 				<img src="./image/award/muse.png" alt="" />
-        <img src="./image/award/a_design_award.png" alt="" />
+				<img src="./image/award/a_design_award.png" alt="" />
 				<img src="./image/award/tid.png" alt="" />
-        <img src="./image/award/if.png" alt="" />
+				<img src="./image/award/if.png" alt="" />
 			</div>
 		</div>
 
@@ -250,117 +248,293 @@
 				</a>
 			</div>
 		</div>
-		<div class="workflow-section" id="workflow">
-			<h2 class="workflow">工作流程</h2>
-			<div class="workflow__bg"></div>
-			<div class="workflow-item">
-				<div
-					class="workflow-item1"
-					data-aos="fade-right"
-					data-aos-delay="0"
-					data-aos-offset="30">
-					<img src="./image/workflow/item1.png" alt="" />
-					<p>需求訪談與目標設定</p>
-				</div>
-				<div class="workflow-content">
-					<div class="workflow-item-content" id="workflow-item1-content">
-						<p style="font-size: 2rem; font-weight: 600">需求訪談與目標設定</p>
-						<p>
-							在這一階段，我們將與客戶進行詳細的訪談，深入了解空間需求、生活習慣以及設計偏好，確定項目範圍與功能目標。通過溝通，釐清客戶對美感、功能性及預算的具體期望，為後續設計打下基礎。
-						</p>
+		<div id="workflow">
+			<div class="workflow-section" id="workflow">
+				<h2 class="workflow">工作流程</h2>
+				<div class="workflow__bg"></div>
+				<div class="workflow-item">
+					<div
+						class="workflow-item1"
+						data-aos="fade-right"
+						data-aos-delay="0"
+						data-aos-offset="30">
+						<img src="./image/workflow/item1.png" alt="" />
+						<p>需求訪談與目標設定</p>
+					</div>
+					<div class="workflow-content">
+						<div class="workflow-item-content" id="workflow-item1-content">
+							<p class="workflow-item-title">需求訪談與目標設定</p>
+							<p>
+								在這一階段，我們將與客戶進行詳細的訪談，深入了解空間需求、生活習慣以及設計偏好，確定項目範圍與功能目標。通過溝通，釐清客戶對美感、功能性及預算的具體期望，為後續設計打下基礎。
+							</p>
+						</div>
+					</div>
+					<div
+						class="workflow-item2"
+						data-aos="fade-right"
+						data-aos-delay="600"
+						data-aos-offset="60">
+						<img src="./image/workflow/item2.png" alt="" />
+						<p>平面配置與概念討論</p>
+					</div>
+					<div class="workflow-content">
+						<div class="workflow-item-content" id="workflow-item2-content">
+							<p class="workflow-item-title">平面配置提案與概念討論</p>
+							<p>
+								根據需求訪談的結果，我們提供初步的平面配置方案，包含空間分配、動線規劃及功能設置。並與客戶進行方向性討論，確認設計概念是否符合需求，同時蒐集意見以進一步優化配置方案。
+							</p>
+						</div>
+					</div>
+					<div
+						class="workflow-item3"
+						data-aos="fade-right"
+						data-aos-delay="1000">
+						<img src="./image/workflow/item3.png" alt="" />
+						<p>設計合約簽訂</p>
+					</div>
+					<div class="workflow-content">
+						<div class="workflow-item-content" id="workflow-item3-content">
+							<p class="workflow-item-title">設計合約簽訂</p>
+							<p>
+								確認平面配置與設計方向後，我們會與客戶簽訂設計合約，明確雙方的權利與義務，包括設計範圍、交付內容及時間安排等，以保障雙方的合作基礎。
+							</p>
+						</div>
+					</div>
+					<div
+						class="workflow-item4"
+						data-aos="fade-right"
+						data-aos-delay="1400">
+						<img src="./image/workflow/item4.png" alt="" />
+						<p>空間3D視覺呈現</p>
+					</div>
+					<div class="workflow-content">
+						<div class="workflow-item-content" id="workflow-item4-content">
+							<p class="workflow-item-title">空間3D視覺呈現</p>
+							<p>
+								在此階段，我們將通過3D視覺效果圖，真實呈現空間氛圍與設計細節，讓客戶能直觀感受未來空間的整體效果。這包括顏色搭配、材質運用及家具配置等細節，幫助客戶更具象化設計概念。
+							</p>
+						</div>
+					</div>
+					<div
+						class="workflow-item5"
+						data-aos="fade-right"
+						data-aos-delay="1800">
+						<img src="./image/workflow/item5.png" alt="" />
+						<p>設計深化與材質確認</p>
+					</div>
+					<div class="workflow-content">
+						<div class="workflow-item-content" id="workflow-item5-content">
+							<p class="workflow-item-title">設計深化與材質確認</p>
+							<p>
+								我們會根據客戶對3D方案的回饋，進一步優化設計細節，並進行材質樣品的確認。這包括地板、牆面、家具及燈具的材質選擇，確保整體風格一致且符合客戶預期。
+							</p>
+						</div>
+					</div>
+					<div
+						class="workflow-item6"
+						data-aos="fade-right"
+						data-aos-delay="2200">
+						<img src="./image/workflow/item6.png" alt="" />
+						<p>施工預算與材質確認</p>
+					</div>
+					<div class="workflow-content">
+						<div class="workflow-item-content" id="workflow-item6-content">
+							<p class="workflow-item-title">施工預算編列與材質最終確認</p>
+							<p>
+								經過材質與設計確認後，我們會依照最終設計方案編列施工預算，並與客戶討論各項目細節。此階段將完成對所有材質與家具的最終敲定，確保施工時無遺漏或額外成本。
+							</p>
+						</div>
+					</div>
+					<div
+						class="workflow-item7"
+						data-aos="fade-right"
+						data-aos-delay="2600">
+						<img src="./image/workflow/item7.png" alt="" />
+						<p>施工圖與報價確認</p>
+					</div>
+					<div class="workflow-content">
+						<div class="workflow-item-content" id="workflow-item7-content">
+							<p class="workflow-item-title">施工圖與報價確認</p>
+							<p>
+								我們將交付詳細的施工圖，包括水電配置、家具定位及結構圖等技術細節，並提供完整的報價單供客戶確認。此步驟確保施工方能準確理解設計要求，避免施工過程中的誤差。
+							</p>
+						</div>
+					</div>
+					<div
+						class="workflow-item8"
+						data-aos="fade-right"
+						data-aos-delay="3000">
+						<img src="./image/workflow/item8.png" alt="" />
+						<p>施工監督與管理</p>
+					</div>
+					<div class="workflow-content">
+						<div class="workflow-item-content" id="workflow-item8-content">
+							<p class="workflow-item-title">施工監督與專案管理</p>
+							<p>
+								在施工階段，我們將提供全程的專案管理與監督服務，確保工程按照設計方案執行，並即時解決現場問題。我們重視施工品質與細節，定期向客戶回報進度，確保最終成果完美呈現。
+							</p>
+						</div>
 					</div>
 				</div>
-				<div
-					class="workflow-item2"
-					data-aos="fade-right"
-					data-aos-delay="600"
-					data-aos-offset="60">
-					<img src="./image/workflow/item2.png" alt="" />
-					<p>平面配置與概念討論</p>
-				</div>
-				<div class="workflow-content">
-					<div class="workflow-item-content" id="workflow-item2-content">
-						<p style="font-size: 2rem; font-weight: 600">
-							平面配置提案與概念討論
-						</p>
-						<p>
-							根據需求訪談的結果，我們提供初步的平面配置方案，包含空間分配、動線規劃及功能設置。並與客戶進行方向性討論，確認設計概念是否符合需求，同時蒐集意見以進一步優化配置方案。
-						</p>
+			</div>
+
+			<div class="page-section workflow-section2">
+				<div class="container">
+					<div class="text-center workflow">
+						<h2 class="section-heading text-uppercase">工作流程</h2>
 					</div>
-				</div>
-				<div class="workflow-item3" data-aos="fade-right" data-aos-delay="1000">
-					<img src="./image/workflow/item3.png" alt="" />
-					<p>設計合約簽訂</p>
-				</div>
-				<div class="workflow-content">
-					<div class="workflow-item-content" id="workflow-item3-content">
-						<p style="font-size: 2rem; font-weight: 600">設計合約簽訂</p>
-						<p>
-							確認平面配置與設計方向後，我們會與客戶簽訂設計合約，明確雙方的權利與義務，包括設計範圍、交付內容及時間安排等，以保障雙方的合作基礎。
-						</p>
-					</div>
-				</div>
-				<div class="workflow-item4" data-aos="fade-right" data-aos-delay="1400">
-					<img src="./image/workflow/item4.png" alt="" />
-					<p>空間3D視覺呈現</p>
-				</div>
-				<div class="workflow-content">
-					<div class="workflow-item-content" id="workflow-item4-content">
-						<p style="font-size: 2rem; font-weight: 600">空間3D視覺呈現</p>
-						<p>
-							在此階段，我們將通過3D視覺效果圖，真實呈現空間氛圍與設計細節，讓客戶能直觀感受未來空間的整體效果。這包括顏色搭配、材質運用及家具配置等細節，幫助客戶更具象化設計概念。
-						</p>
-					</div>
-				</div>
-				<div class="workflow-item5" data-aos="fade-right" data-aos-delay="1800">
-					<img src="./image/workflow/item5.png" alt="" />
-					<p>設計深化與材質確認</p>
-				</div>
-				<div class="workflow-content">
-					<div class="workflow-item-content" id="workflow-item5-content">
-						<p style="font-size: 2rem; font-weight: 600">設計深化與材質確認</p>
-						<p>
-							我們會根據客戶對3D方案的回饋，進一步優化設計細節，並進行材質樣品的確認。這包括地板、牆面、家具及燈具的材質選擇，確保整體風格一致且符合客戶預期。
-						</p>
-					</div>
-				</div>
-				<div class="workflow-item6" data-aos="fade-right" data-aos-delay="2200">
-					<img src="./image/workflow/item6.png" alt="" />
-					<p>施工預算與材質確認</p>
-				</div>
-				<div class="workflow-content">
-					<div class="workflow-item-content" id="workflow-item6-content">
-						<p style="font-size: 2rem; font-weight: 600">
-							施工預算編列與材質最終確認
-						</p>
-						<p>
-							經過材質與設計確認後，我們會依照最終設計方案編列施工預算，並與客戶討論各項目細節。此階段將完成對所有材質與家具的最終敲定，確保施工時無遺漏或額外成本。
-						</p>
-					</div>
-				</div>
-				<div class="workflow-item7" data-aos="fade-right" data-aos-delay="2600">
-					<img src="./image/workflow/item7.png" alt="" />
-					<p>施工圖與報價確認</p>
-				</div>
-				<div class="workflow-content">
-					<div class="workflow-item-content" id="workflow-item7-content">
-						<p style="font-size: 2rem; font-weight: 600">施工圖與報價確認</p>
-						<p>
-							我們將交付詳細的施工圖，包括水電配置、家具定位及結構圖等技術細節，並提供完整的報價單供客戶確認。此步驟確保施工方能準確理解設計要求，避免施工過程中的誤差。
-						</p>
-					</div>
-				</div>
-				<div class="workflow-item8" data-aos="fade-right" data-aos-delay="3000">
-					<img src="./image/workflow/item8.png" alt="" />
-					<p>施工監督與管理</p>
-				</div>
-				<div class="workflow-content">
-					<div class="workflow-item-content" id="workflow-item8-content">
-						<p style="font-size: 2rem; font-weight: 600">施工監督與專案管理</p>
-						<p>
-							在施工階段，我們將提供全程的專案管理與監督服務，確保工程按照設計方案執行，並即時解決現場問題。我們重視施工品質與細節，定期向客戶回報進度，確保最終成果完美呈現。
-						</p>
-					</div>
+					<ul class="timeline">
+						<li>
+							<div data-aos="flip-left" class="timeline-image">
+								<img
+									class="rounded-circle img-fluid"
+									src="/image/workflow/item1.png"
+									alt="..." />
+							</div>
+							<div class="timeline-panel">
+								<div data-aos="fade-right" class="timeline-heading">
+									<h4>需求訪談與目標設定</h4>
+								</div>
+								<div data-aos="fade-right" class="timeline-body">
+									<p>
+										在這一階段，我們將與客戶進行詳細的訪談，深入了解空間需求、生活習慣以及設計偏好，確定項目範圍與功能目標。通過溝通，釐清客戶對美感、功能性及預算的具體期望，為後續設計打下基礎。
+									</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div data-aos="flip-right" class="timeline-image">
+								<img
+									class="rounded-circle img-fluid"
+									src="/image/workflow/item2.png"
+									alt="..." />
+							</div>
+							<div class="timeline-panel">
+								<div data-aos="fade-left" class="timeline-heading">
+									<h4>平面配置與概念討論</h4>
+								</div>
+								<div data-aos="fade-left" class="timeline-body">
+									<p class="text-muted">
+										根據需求訪談的結果，我們提供初步的平面配置方案，包含空間分配、動線規劃及功能設置。並與客戶進行方向性討論，確認設計概念是否符合需求，同時蒐集意見以進一步優化配置方案。
+									</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div data-aos="flip-left" class="timeline-image">
+								<img
+									class="rounded-circle img-fluid"
+									src="/image/workflow/item3.png"
+									alt="..." />
+							</div>
+							<div class="timeline-panel">
+								<div data-aos="fade-right" class="timeline-heading">
+									<h4>設計合約簽訂</h4>
+									<!-- <h4 class="subheading"></h4> -->
+								</div>
+								<div data-aos="fade-right" class="timeline-body">
+									<p class="text-muted">
+										確認平面配置與設計方向後，我們會與客戶簽訂設計合約，明確雙方的權利與義務，包括設計範圍、交付內容及時間安排等，以保障雙方的合作基礎。
+									</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div data-aos="flip-right" class="timeline-image">
+								<img
+									class="rounded-circle img-fluid"
+									src="/image/workflow/item4.png"
+									alt="..." />
+							</div>
+							<div class="timeline-panel">
+								<div data-aos="fade-left" class="timeline-heading">
+									<h4>空間3D視覺呈現</h4>
+									<!-- <h4 class="subheading"></h4> -->
+								</div>
+								<div data-aos="fade-left" class="timeline-body">
+									<p class="text-muted">
+										在此階段，我們將通過3D視覺效果圖，真實呈現空間氛圍與設計細節，讓客戶能直觀感受未來空間的整體效果。這包括顏色搭配、材質運用及家具配置等細節，幫助客戶更具象化設計概念。
+									</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div data-aos="flip-left" class="timeline-image">
+								<img
+									class="rounded-circle img-fluid"
+									src="/image/workflow/item5.png"
+									alt="..." />
+							</div>
+							<div class="timeline-panel">
+								<div data-aos="fade-right" class="timeline-heading">
+									<h4>設計深化與材質確認</h4>
+									<!-- <h4 class="subheading"></h4> -->
+								</div>
+								<div data-aos="fade-right" class="timeline-body">
+									<p class="text-muted">
+										我們會根據客戶對3D方案的回饋，進一步優化設計細節，並進行材質樣品的確認。這包括地板、牆面、家具及燈具的材質選擇，確保整體風格一致且符合客戶預期。
+									</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div data-aos="flip-right" class="timeline-image">
+								<img
+									class="rounded-circle img-fluid"
+									src="/image/workflow/item6.png"
+									alt="..." />
+							</div>
+							<div class="timeline-panel">
+								<div data-aos="fade-left" class="timeline-heading">
+									<h4>施工預算與材質確認</h4>
+									<!-- <h4 class="subheading"></h4> -->
+								</div>
+								<div data-aos="fade-left" class="timeline-body">
+									<p class="text-muted">
+										經過材質與設計確認後，我們會依照最終設計方案編列施工預算，並與客戶討論各項目細節。此階段將完成對所有材質與家具的最終敲定，確保施工時無遺漏或額外成本。
+									</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div data-aos="flip-left" class="timeline-image">
+								<img
+									class="rounded-circle img-fluid"
+									src="/image/workflow/item7.png"
+									alt="..." />
+							</div>
+							<div class="timeline-panel">
+								<div data-aos="fade-right" class="timeline-heading">
+									<h4>施工圖與報價確認</h4>
+									<!-- <h4 class="subheading"></h4> -->
+								</div>
+								<div data-aos="fade-right" class="timeline-body">
+									<p class="text-muted">
+										我們將交付詳細的施工圖，包括水電配置、家具定位及結構圖等技術細節，並提供完整的報價單供客戶確認。此步驟確保施工方能準確理解設計要求，避免施工過程中的誤差。
+									</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div data-aos="flip-right" class="timeline-image">
+								<img
+									class="rounded-circle img-fluid"
+									src="/image/workflow/item8.png"
+									alt="..." />
+							</div>
+							<div class="timeline-panel">
+								<div data-aos="fade-left" class="timeline-heading">
+									<h4>施工監督與專案管理</h4>
+									<!-- <h4 class="subheading"></h4> -->
+								</div>
+								<div data-aos="fade-left" class="timeline-body">
+									<p class="text-muted">
+										在施工階段，我們將提供全程的專案管理與監督服務，確保工程按照設計方案執行，並即時解決現場問題。我們重視施工品質與細節，定期向客戶回報進度，確保最終成果完美呈現。
+									</p>
+								</div>
+							</div>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -586,31 +760,30 @@
 
 <!-- nav -->
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-  const hamburgerMenu = document.querySelector('.hamburger-menu');
-  const navbar = document.querySelector('.navbar');
+	document.addEventListener("DOMContentLoaded", () => {
+		const hamburgerMenu = document.querySelector(".hamburger-menu");
+		const navbar = document.querySelector(".navbar");
 
-  hamburgerMenu.addEventListener('click', () => {
-    navbar.classList.toggle('active');
-    hamburgerMenu.classList.toggle('active');
-  });
-});
+		hamburgerMenu.addEventListener("click", () => {
+			navbar.classList.toggle("active");
+			hamburgerMenu.classList.toggle("active");
+		});
+	});
 </script>
 
 <script>
-  document.querySelectorAll('.nav-text').forEach(div => {
-  div.addEventListener('click', () => {
-    const targetId = div.getAttribute('data-target');
-    const targetElement = document.querySelector(targetId);
-    console.log('Current ---->>>>', targetElement, targetId)
+	document.querySelectorAll(".nav-text").forEach((div) => {
+		div.addEventListener("click", () => {
+			const targetId = div.getAttribute("data-target");
+			const targetElement = document.querySelector(targetId);
+			console.log("Current ---->>>>", targetElement, targetId);
 
-    if (targetElement) {
-      targetElement.scrollIntoView({
-        behavior: 'smooth',
-        block: 'start'
-      });
-    }
-  });
-});
-
+			if (targetElement) {
+				targetElement.scrollIntoView({
+					behavior: "smooth",
+					block: "start",
+				});
+			}
+		});
+	});
 </script>
